# ge-sc-machine

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: invalid_solidity.sol
sco/: Dockerfile  __main__.py  auth.py  config.py  consts.py  main.py  requirements.txt
sco/api/: common.py
sco/api/views/: contract_level_bug.py  line_level_bug.py  summerize_reports.py
sco/common/: logging.py  utils.py
sco/common/process_graphs/: call_graph_generator.py  combination_call_graph_and_control_flow_graph_helper.py  control_flow_graph_generator.py  slither_reader.py
sco/schemas/: api.py  fields.py
sco/sco_models/: graph_utils.py  model_hgt.py  model_mando.py
sco_frontend/: package-lock.json  package.json
sco_frontend/public/: index.html
sco_frontend/src/: App.css  App.js  App.test.js  index.css  index.js
sco_frontend/src/components/: Chart.js  Graph.js  Heatmap.js  SH_code.js  Styles.js  VulDetect.js  graph.css  graphcheck.css  graphcheck.js
sco_frontend/src/smart_contracts/: access_control_buggy_32.sol
scripts/: run_service.sh
tests/: test_sco.py
